Fix textwrap around image.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-:root {
-    --bg-color: #fafafa;
-    --fg-color: #000000;
+@font-face {
+    font-family: "JuniusX-Regular";
+    src: url("Junicode-New/webfiles/JuniusVF.woff2");
 }
 
 html, body {
@@ -12,71 +12,69 @@ html, body {
 }
 
 body {
-    background-color: var(--bg-color);
-    color: var(--fg-color);
+    font-size: 1.3em;
+    line-height: 1.3;
+    font-family: "JuniusX-Regular", serif;
 }
 
-.main {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 1vmax;
-}
-
-.navbar {
+.content {
+    height: 100%;
+    min-height: 100%;
+    display: table;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 2vmax;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    color: var(--fg-color);
-    font-family: 'Playfair Display', serif;
+.navbar-cell {
+    display: table-cell;
+    width: 20%;
 }
 
-a {
-    color: var(--fg-color);
+.navbar {
+    padding: 0.5em;
+    font-size: 1.3em;
+    text-align: right;
 }
 
-p {
-    color: var(--fg-color);
-    font-family: 'Vollkorn', serif;
+a.navlink:link, a.navlink:visited {
+    text-decoration: none;
+    position: relative;
+    color: #000000;
 }
 
-footer {
-    width: 50%;
+a.navlink:hover, a.navlink:active {
+    color: #000000;
+}
+
+a.navlink:after {
+    content: "";
+    position: absolute;
     bottom: 0;
-    position: fixed;
+    left: 0;
+    width: 0%;
+    border-bottom: 1px solid;
+    transition: 0.2s;
 }
 
-#homepage {
-    background-image: url("images/columns_phone.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-@media (min-width: 1025px) {
-    #homepage {
-        background-image: url("images/columns.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
+a.navlink:hover:after {
+    width: 100%;
 }
 
-#origami {
-    text-align: center;
+.main-cell {
+    display: table-cell;
 }
 
-#resume {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-#resume-embed {
-    flex-grow: 1;
+.main {
+    padding: 0.5em;
 }
 
 .textwrap {
     float: right;
     margin: 1.1vmax;
+}
+
+h1 {
+    font-feature-settings: "smcp";
+    border-top: 1px solid;
 }
